--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -17,7 +17,7 @@ html {
 }
 
 .nav-link {
-    @apply block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700;
+    @apply block py-2 pl-3 pr-4 text-gray-700 hover:text-accent-400 dark:hover:text-accent-600 rounded hover:bg-gray-100 md:hover:bg-transparent md:p-0 dark:text-gray-400 dark:hover:bg-gray-700 md:dark:hover:bg-transparent dark:border-gray-700;
 }
 
 /* Toasts */
