--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -20,6 +20,10 @@ html {
     @apply block py-2 pl-3 pr-4 text-gray-700 hover:text-accent-400 dark:hover:text-accent-600 rounded hover:bg-gray-100 md:hover:bg-transparent md:p-0 dark:text-gray-400 dark:hover:bg-gray-700 md:dark:hover:bg-transparent dark:border-gray-700;
 }
 
+[x-cloak] {
+    display: none;
+}
+
 /* Toasts */
 .toastify {
     padding: 12px 20px;
